# ros2_moveit2_ur5e_grasp

./: .gitignore
src/robotiq_description/urdf/: 2f_85.ros2_control.xacro  robotiq_2f_85_macro.urdf.xacro
src/ur5e_gripper_control/: CMakeLists.txt  package.xml
src/ur5e_gripper_control/config/: simple_pick_place.yaml
src/ur5e_gripper_control/launch/: simple_pick_place.launch.py
src/ur5e_gripper_control/src/: fcl_safety_monitor.cpp  simple_pick_place.cpp
src/ur5e_gripper_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  sensors_3d.yaml  ur5e_gripper_controllers.yaml
src/ur5e_gripper_moveit_config/gazebo/: sim_env.world
src/ur5e_gripper_moveit_config/launch/: gazebo_no_moveit.launch.py  ur5e_gripper_moveit.launch.py  ur5e_gripper_sim_control.launch.py
src/ur5e_gripper_moveit_config/srdf/: ur5e_gripper.srdf.xacro
src/ur5e_gripper_moveit_config/urdf/: single_ur5e_gripper.urdf.xacro  ur5e_gripper.urdf.xacro
src/ur_bringup/launch/: simulation.launch.py  start_grasp.launch.py
src/vision/vision/: obj_detect.py  obj_seg.py
